--- a/SQL pizza sales Project/Readme
+++ b/SQL pizza sales Project/Readme
@@ -1,1 +1,5 @@
+ׂ╰┈➤ Pizza Sales Analysis Project Using SQL
 
+𓆝 𓆟 𓆞 𓆝 𓆟 The Pizza Sales Analysis project using SQL involves leveraging structured query language (SQL) to extract,
+analyze, and interpret data from a database. The primary goal is to gain insights into sales patterns, customer behavior, 
+and overall business performance ୧⍤⃝, which can be used to make informed decisions. 𓆝 𓆟 𓆞 𓆝 𓆟
